# posest

./: .gitignore  download-data.sh  pyproject.toml
posest/: __init__.py
posest/cli/: __init__.py  app.py  train.py
posest/cli/data/: __init__.py  app.py  smp2idx.py  split.py
posest/cli/data/jta/: __init__.py  app.py  exclude.py
posest/data/: __init__.py  data_subset_type.py  dataset.py  transforms.py
posest/data/jta/: __init__.py  keypoint_type.py  pose.py
posest/data/jta/vis/: __init__.py  pose3d_plotter.py
posest/mobile_human_pose/cli/: __init__.py  app.py  train.py
posest/mobile_human_pose/cli/jta/: __init__.py  app.py  create_sample_names_file.py  csv.py  exclude_samples.py
posest/mobile_human_pose/data/: __init__.py  dataset.py  image_converter.py
posest/mobile_human_pose/models/: __init__.py  backbone.py  config.py  inv_res.py  mobile_human_pose.py
posest/mobile_human_pose/plot/: __init__.py
posest/mobile_human_pose/schemas/: pose.py
posest/mobile_human_pose/train/: __init__.py  config.py  logging.py  trainer.py
posest/models/: __init__.py  backbone.py  conv.py  deconv.py  mobile_human_pose.py  spec.py
posest/plot/: line_segment_data.py  pose_plot.py
posest/schemas/: __init__.py  keypoint_name.py  pose.py
posest/train/: config.py  criterions.py  logging.py  trainer.py
