[tool.poetry]
name = "posest"
version = "0.0.1"
description = "A pacakge for pose estimation."
authors = ["isaac-fei <isaac.omega.fei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
torchvision = "^0.17.1"
h5py = "^3.10.0"
numpy = "^1.26.4"
plotly = "^5.19.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
tensorboard = "^2.16.2"
torch-tb-profiler = "^0.4.3"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
nbformat = "^5.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
