[tool.poetry]
name = "posest"
version = "0.0.1"
description = "A pacakge for pose estimation."
authors = ["isaac-fei <isaac.omega.fei@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
posest = "posest:app"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
torchvision = "^0.17.1"
h5py = "^3.10.0"
numpy = "^1.26.4"
plotly = "^5.19.0"
tomli-w = "^1.0.0"
typer = {extras = ["all"], version = "^0.9.0"}
loguru = "^0.7.2"
pydantic = "^2.6.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
tensorboard = "^2.16.2"
torch-tb-profiler = "^0.4.3"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
nbformat = "^5.9.2"
wandb = "^0.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
